nginx/namespace.yml
kind: Namespace
apiVersion: v1
metadata:           #information about the namespace
  name: nginx
