nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx                      #access pod with label app: nginx
  template:                           #create pod template
    metadata:
      name: nginx-pod
      labels:
        app: nginx                     #label for the pod
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
